第31回演習課題 変数名変更に伴うコードの修正